--- a/rpcfx-api/pom.xml
+++ b/rpcfx-api/pom.xml
@@ -9,9 +9,9 @@
 <!--		<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 	</parent>
 	<groupId>online.flyingfish</groupId>
-	<artifactId>rpcfx-demo-api</artifactId>
+	<artifactId>rpcfx-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>rpcfx-demo-api</name>
+	<name>rpcfx-api</name>
 
 	<properties>
 		<java.version>1.8</java.version>
